# smedley_kernel

models/v2/classes/: CCountry.toml  CTraitDefinitionArray.toml
plugins/: CMakeLists.txt
plugins/dailyupdate_example/: CMakeLists.txt  dailyupdate_example.toml  plugin.cpp
smedley_kernel/include/smedley/: eventregistry.hpp
smedley_kernel/include/smedley/clausewitz/: types.hpp
smedley_kernel/include/smedley/events/: addtosphere.hpp  console.hpp  dailyupdate.hpp  monthlyupdate.hpp  westernize.hpp
smedley_kernel/include/smedley/v2/: country.hpp  leader.hpp  trait.hpp  traitdefinition.hpp  unit.hpp
smedley_kernel/include/smedley/v2/db/: traitdefinition.hpp
smedley_kernel/src/: event.cpp  hooks.cpp
smedley_kernel/src/events/: addtosphere.cpp  console.cpp  dailyupdate.cpp  monthlyupdate.cpp  westernize.cpp
